texi2html/test/invalid/res_all/texi_recursive_copying/recursive_copying.texi.first
\input texinfo @c -*-texinfo-*-

@setfilename recursive_copying.info


@node Top
@top Test recursive copying

Test recursive copying.

@insertcopying

@bye
